tests/snapshots/notebook_test__test_metadata_period_cli_json.snap
---
source: tests/notebook_test.rs
expression: output.stdout.to_str().unwrap()
---
[
  {
    "path": "tests/e2e_notebooks/test_metadata_period.ipynb",
    "type": "StripMeta",
    "extra_key": "metadata.application/vnd.databricks.v1+notebook"
  },
  {
    "path": "tests/e2e_notebooks/test_metadata_period.ipynb",
    "type": "ClearOutput",
    "cell_number": 1
  },
  {
    "path": "tests/e2e_notebooks/test_metadata_period.ipynb",
    "type": "ClearCount",
    "cell_number": 1
  },
  {
    "path": "tests/e2e_notebooks/test_metadata_period.ipynb",
    "type": "CellStripMeta",
    "cell_number": 0,
    "extra_key": "cell.metadata.application/vnd.databricks.v1+cell"
  },
  {
    "path": "tests/e2e_notebooks/test_metadata_period.ipynb",
    "type": "CellStripMeta",
    "cell_number": 1,
    "extra_key": "cell.metadata.application/vnd.databricks.v1+cell"
  }
]
